--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn build",
     "start": "next start -p 3002",
     "lint": "next lint"
   },
@@ -35,8 +35,8 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lru-cache": "^10.0.0",
-    "moment": "^2.29.4",
-    "next": "13.0.6",
+    "moment": "2.29.4",
+    "next": "13.1.6",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
