--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_ENABLE_REDUX_DEV_TOOLS= false
 NEXT_PUBLIC_GOOGLE_MAP_KEY=AIzaSyDiDGVR1GnClPIXcsOOvAniamtAmS-MHjY
-NEXT_PUBLIC_BASE_URL=https://6ammart-admin.6amtech.com
-NEXT_CLIENT_HOST_URL=https://6ammart-react.6amtech.com
+NEXT_PUBLIC_BASE_URL=http://biofresco.codecashevolution.com
+NEXT_CLIENT_HOST_URL=https://pol-mu.vercel.app
